grammar.js
    source_file: $ => repeat($.sentence),

    sentence: $ => choice(
      seq(
        optional($.fail),
        optional($.attributes),
        optional($.selector),
        choice(
          $._vernacular_command,
          $.ltac_definition,
          $._ltac_expr,
        ),
        choice(".", "...")
      ),
      $.proof_block,
      $.bullet
    ),

    _vernacular_command: $ =>
      choice(
        $.require_command,
        $.import_command,
        $.export_command,
        $.create_hintdb_command,
        $.create_rewrite_hintdb_command,
        $.hint_command,
        $.evaluation_command,
        $.extraction_command,
        $.extract_command,
        $.set_command,
        $.unset_command,
        $.add_command,
        $.remove_command,
        $.test_command,
        $.show_proof_command,
        $.coercion_command,
        $.declare_command,
        $.open_scope_command,
        $.close_scope_command,

        $.theorem_command,
        $.definition_command,
        $.fixpoint_command,
        $.inductive_command,
        $.assumption_command,
        $.arguments_command,
        $.section_command,
        $.module_command,
        $.end_command,
        $.reserved_notation_command,
        $.notation_command,

        $.proof_command,
        $.qed_command,
        $.save_command,
        $.defined_command,
        $.admitted_command,
        $.abort_command,
      ),

    require_command: $ => seq(
      optional(seq("From", field("dirpath", $._name))),
      "Require",
      optional(seq(
        choice("Import", "Export"),
        optional($.import_categories)
      )),
      repeat1($.filtered_import)
    ),

    filtered_import: $ => seq(
      field("module", $._name),
      optional(seq(
        "(",
        $.filtered_import_item,
        repeat(seq(",", $.filtered_import_item)),
        ")"
      ))
    ),

    evaluation_command: $ => seq(
      choice("Check", "Compute", "Print", "Search", "Locate"),
      $._term,
      optional(seq(":", $.type))
    ),

    definition_command: $ => seq(
      choice("Definition", "Example"),
      $.ident_decl,
      $._def_body
    ),

    _def_body: $ => choice(
      seq(
        repeat($.binder),
        optional(seq(":", $.type)),
        ":=",
        field("body", $._term)
      ),
      seq(
        repeat($.binder),
        ":",
        $.type
      )
    ),

    assumption_command: $ => seq(
      choice(
        "Axiom", "Axioms",
        "Conjecture", "Conjectures",
        "Parameter", "Parameters",
        "Hypothesis", "Hypotheses",
        "Variable", "Variables",
      ),

      optional(seq(
        "Inline",
        optional(seq("(", $.number, ")"))
      )),

      choice(
        $.assumpt,
        repeat1(seq("(", $.assumpt, ")"))
      )
    ),

    assumpt: $ => seq(repeat1($.ident_decl), $.of_type),

    of_type: $ => seq(choice(":", ":>"), $.type),

    module_command: $ => seq("Module", $.ident,),

    end_command: $ => seq("End", $.ident),

    notation_command: $ => seq(
      "Notation",
      $.notation_declaration
    ),

    notation_declaration: $ => seq(
      field("notation", $.string),
      ":=",
      field("definition", $._term),
      optional($.syntax_modifier_list),
      optional($.notation_scope)
    ),

    syntax_modifier_list: $ => seq(
      "(",
      $.syntax_modifier,
      repeat(seq(",", $.syntax_modifier)),
      optional(","),
      ")"
    ),

    syntax_modifier: $ => choice(
      $.level_modifier,
      $.custom_entry_modifier,
      $.associativity_modifier,
      $.parsing_modifier,
      $.printing_modifier,
      $.format_modifier,
      $.plural_variable_modifier,
      $.singular_variable_modifier
    ),

    level_modifier: $ => $.at_level_num,

    associativity_modifier: $ => seq(
      choice("left", "right", "no"),
      "associativity"
    ),

    at_level_num: $ => seq("at", "level", $.number),

    _term: $ => choice(
      $._atomic_term,
      $.application,
      $.lambda_function,
      $.quantifier_term,
      $.let_expression,
      $.fix_expression,
      $.if_expression,
      $.arrow_term,
      $._infix_operation,
      $.imp_evaluation_operation,
    ),

    _atomic_term: $ => seq(
      optional("'"),
      choice(
        $.ident,
        $.qualid,
        seq("@", $._name),
        $.scoped_term,
        $.number,
        $.string,
        $.metavariable,
        $.parenthesized_term,
        $.list_literal,
        $.match_expression,
        $.double_dot,

        $.custom_notation_block,
      ),
    ),

    parenthesized_term: $ => seq(
      "(",
      $._term,

      optional(choice(
        repeat1(seq(",", $._term)),
        repeat1(seq(";", $._term))
      )),

      optional(choice(",", ";")),
      ")"
    ),

    list_literal: $ => seq(
      "[",
      optional(seq(
        $._term,
        repeat(seq(";", $._term)),
        optional(";")
      )),
      "]"
    ),

    application: $ => prec.left('application', seq(
      $._term,
      repeat1(choice(
        seq("(", $.ident, ":=", $._term, ")"),
        seq("(", $.number, ":=", $._term, ")"),
        $._atomic_term
      ))
    )),

    let_expression: $ => choice(
      $._let_expression_term,
      $._destructuring_let_name_list,
      $._destructuring_let_apos
    ),

    _let_expression_term: $ => prec.right('binder',
      seq(
        "let",
        field("name", $._binder_name),
        repeat($.binder),
        optional(seq(":", $.type)),
        ":=",
        field("value", $._term),
        "in",
        field("body", $._term),
      )
    ),

    _destructuring_let_name_list: $ => prec.right('binder', seq(
      "let",
      field("pattern", $.let_expression_name_list),
      optional($.term_as_clause),
      optional($.term_return_clause),
      ":=",
      field("value", $._term),
      "in",
      field("body", $._term),
    )),

    _destructuring_let_apos: $ => prec.right('binder', seq(
      "let",
      field("pattern", $.destructuring_pattern),
      optional($.term_in_pattern),
      ":=",
      field("value", $._term),
      optional($.term_return_clause),
      "in",
      field("body", $._term),
    )),

    let_expression_name_list: $ => seq(
      "(",
      optional(seq($._binder_name, repeat(seq(",", $._binder_name)))),
      ")"
    ),

    match_expression: $ => seq(
      "match",
      $.case_item,
      repeat(seq(",", $.case_item)),
      optional(seq("return", $._term)),
      "with",
      optional(choice(
        seq(
          $.match_case,
          repeat(seq("|", $.match_case))
        ),
        repeat1(seq("|", $.match_case)),
      )),
      "end"
    ),

    case_item: $ => seq(
      $._term,
      optional($.term_as_clause),
      optional($.term_in_pattern),
    ),

    match_case: $ => seq(
      $.pattern_option,
      repeat(seq("|", $.pattern_option)),
      "=>",
      field("body", $._term)
    ),

    pattern_option: $ => seq(
      field("pattern", $._pattern),
      repeat(seq(",", field("pattern", $._pattern))),
    ),

    cons_operation: $ => prec.right('list_ops', seq(
      $._term,
      "::",
      $._term
    )),

    additive_operation: $ => prec.left('additive', seq(
      $._term,
      choice("+", "-"),
      $._term
    )),

    comparison_operation: $ => prec.left('comparison', seq(
      $._term,
      choice("=", "<>", "<", "<=", ">", ">=", "=?", "<>?", "<?", "<=?", ">?", ">=?"),
      $._term
    )),

    _pattern: $ => choice(
      $._pattern_atomic,
      $.pattern_application,
      $.infix_pattern,

      $.custom_notation_block,
    ),

    _pattern_atomic: $ => choice(
      $.wildcard,
      $._name,
      $.number,
      $.string,
      $.parenthesized_pattern,
      $.list_pattern,
      seq("{", "|", repeat(seq($._name, ":=", $._pattern)), "|", "}"),
    ),

    parenthesized_pattern: $ => seq(
      "(",
      $._pattern,
      repeat(seq(choice("|", ","), $._pattern)),
      ")"
    ),

    list_pattern: $ => seq(
      "[",
      optional(seq(
        $._pattern,
        repeat(seq(";", $._pattern)),
      )),
      "]"
    ),

    pattern_application: $ => prec.left('application', seq(
      field("constructor", $._name),
      repeat1($._pattern_atomic)
    )),

    infix_pattern: $ => prec.right('list_ops', seq(
      $._pattern,
      choice("::", "++"),
      $._pattern,
    )),

    destructuring_pattern: $ => prec.right(seq(
      "'", $._pattern
    )),

    // ~~~~~~~~~~~~~~~~ Binders and Type ~~~~~~~~~~~~~~~~ 
    type: $ => $._term,

    _binder_name: $ => choice($.wildcard, $._name),

    binder: $ => choice(
      $._binder_name,
      seq("(", repeat($._binder_name), ":", $.type, ")"),
      seq("(", $._binder_name, optional(seq(":", $.type)), ":=", $._term, ")"),
      $.implicit_binders,
      seq("(", $._binder_name, ":", $.type, "|", $._term, ")"),
      seq($.destructuring_pattern),
    ),

    ltac_definition: $ => seq(
      "Ltac",
      field("name", $.ident),
      repeat($.ident),
      ":=",
      field("body", $._ltac_expr)
    ),

    _ltac_expr: $ => choice(
      $.parenthesized_tactic,

      $.tactic_sequence,
      $.tactic_branch,
      $.tactic_invocation,

      $.tactic_or,
      $.match_goal,
    ),

    tactic_sequence: $ => prec.left('tactic_sequence', seq(
      $._ltac_expr,
      ";",
      $._ltac_expr
    )),

    tactic_branch: $ => seq(
      $._ltac_expr,
      ";",
      "[",
      optional($._for_each_goal),
      "]"
    ),

    _for_each_goal: $ => choice(
      $._goal_tactics,
    ),

    tactic_invocation: $ => choice(
      $.intros_tactic,
      $.assert_tactic,
      $.rewrite_tactic,
      $.tactical,
      $.generic_tactic
    ),

    atomic_term_with_bindings: $ => prec.right(seq(
      $._atomic_term, optional(seq("with", $.bindings))
    )),

    generic_tactic: $ => prec.left('tactic_application', seq(
      field("name", $.ident),
      optional($.generic_tactic_body),
      repeat(seq(",", $.generic_tactic_body)),
      optional(",")
    )),

    generic_tactic_body: $ => choice(
      seq(
        repeat1($._tactic_arg),
        repeat($._tactic_clause)
      ),
      repeat1($._tactic_clause)
    ),

    _tactic_clause: $ => choice(
      $.in_clause,
      $.as_clause,
      $.eqn_clause,
      $.by_clause,
      $.using_clause,
    ),

    _tactic_arg: $ => choice(
      $.atomic_term_with_bindings,
    ),

    match_goal: $ => seq(
      choice("match", "lazymatch", "multimatch"),
      optional("reverse"),
      "goal",
      "with",
      choice(
        repeat1(seq("|", $.match_goal_case)),
        seq(
          $.match_goal_case,
          repeat(seq("|", $.match_goal_case))
        ),
        optional("|")
      ),
      "end"
    ),

    match_goal_case: $ => seq(
      $.goal_pattern,
      "=>",
      $._ltac_expr
    ),

    goal_pattern: $ => choice(
      $._goal_pattern_body,
      seq("[", $._goal_pattern_body, "]"),
      "_"
    ),

    _goal_pattern_body: $ => seq(
      optional(seq($.match_hyp, repeat(seq(",", $.match_hyp)))),
      "|-",
      $.match_pattern
    ),

    match_hyp: $ => seq(
      $.ident,
      choice(
        seq(":", $.match_pattern),
        seq(":=", $.match_pattern),
        seq(":=", "[", $.match_pattern, "]", ":", $.match_pattern),
      )
    ),

    // ~~~~~~~~~~~~~~~~ Tactic Patterns ~~~~~~~~~~~~~~~~

    match_pattern: $ => choice(
      $._term,
      seq("context", optional($.ident), "[", $._term, "]")
    ),

    intro_pattern: $ => choice(
      $.ident,
      $.wildcard,
      "?",
      "->",
      "<-",
      $.bracketed_intro_pattern
    ),

    bracketed_intro_pattern: $ => seq(
      "[",
      repeat(choice(
        $.ident,
        "?",
        $.wildcard,
        "|",
        "&",
        $.bracketed_intro_pattern
      )),
      "]"
    ),

    // ~~~~~~~~~~~~~ Tactic Clauses ~~~~~~~~~~~~~~~ 

    as_clause: $ => seq(
      "as",
      repeat1($.intro_pattern)
    ),

    _name: $ => choice(
      $.ident,
      $.qualid
    ),

    comment: $ => seq(
      "(*",
      repeat(choice(
        /[^*()]+/,
        /[*()]/
      )),
      "*)"
    ),

    ident: $ => /[\p{L}_][\p{L}_\p{N}']*/u,

    ident_decl: $ => seq(
      $.ident,
    ),


    metavariable: $ => token(seq(
      "?",
      choice(
        /[a-zA-Z_][a-zA-Z0-9_']*/,
        /[0-9]+/
      )
    )),

    number: $ => choice(
      /\d[\d_]*(\.[\d_]+)?([eE][+-]?\d[\d_]*)?/,
      /0[xX][0-9a-fA-F][0-9a-fA-F_]*(\.[0-9a-fA-F_]+)?([pP][+-]?\d[\d_]*)?/
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        /[^"]/,
        '""'
      )),
      '"'
    ),

    wildcard: $ => "_",

    // Rules for Software Foundations Imp Chapters
